--- a/109-2/20210308.md
+++ b/109-2/20210308.md
@@ -1,4 +1,4 @@
-* [Ansible-playbook 遠端配置]()
+* [Ansible-playbook 遠端配置](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210308.md#ansible-playbook-%E9%81%A0%E7%AB%AF%E9%85%8D%E7%BD%AE)
     - [Ansible-playbook 格式]()
     - [使用環境]()
         - [拓樸圖]()
@@ -19,7 +19,7 @@
 使用 ansible-playbook 腳本自動部署設定 PC2、PC3 的 IP
 
 ## Ansible-playbook 格式
-![](Pic/20210308/AnsiblePlaybookArchitecture.PNG)
+![](Pic/20210308/AnsiblePlaybookArchitecture.png)
 
 ## 使用環境
 * EVE-Pro
