--- a/109-2/20210315.md
+++ b/109-2/20210315.md
@@ -1,14 +1,13 @@
-* [Mininet]()
-    - [建立一個網路拓樸]()
-    - [Gnuplot - 繪出兩筆數據]()
-      - [Ubuntu]()
-      - [Mininet]()
-    - [使用腳本建立 Mininet]()
-      - [簡易建立 h1、h2]()
-      - [建立 h1、h2、r (router)]()
-      - [建立 h1、h2、r 並設定好網路]()
-      - [Test - 讓 h1 可以 ping h2]()
-
+* [Mininet](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#mininet)
+    - [建立一個網路拓樸](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#%E5%BB%BA%E7%AB%8B%E4%B8%80%E5%80%8B%E7%B6%B2%E8%B7%AF%E6%8B%93%E6%A8%B8)
+    - [Gnuplot - 繪出兩筆數據](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#gnuplot---%E7%B9%AA%E5%87%BA%E5%85%A9%E7%AD%86%E6%95%B8%E6%93%9A)
+      - [Ubuntu](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#ubuntu)
+      - [Mininet](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#mininet-1)
+    - [使用腳本建立 Mininet](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#%E4%BD%BF%E7%94%A8%E8%85%B3%E6%9C%AC%E5%BB%BA%E7%AB%8B-mininet)
+      - [簡易建立 h1、h2](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#%E7%B0%A1%E6%98%93%E5%BB%BA%E7%AB%8B-h1h2)
+      - [建立 h1、h2、r (router)](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#%E5%BB%BA%E7%AB%8B-h1h2r-router)
+      - [建立 h1、h2、r 並設定好網路](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#%E5%BB%BA%E7%AB%8B-h1h2r-%E4%B8%A6%E8%A8%AD%E5%AE%9A%E5%A5%BD%E7%B6%B2%E8%B7%AF)
+      - [Test - 讓 h1 可以 ping h2](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210315.md#test---%E8%AE%93-h1-%E5%8F%AF%E4%BB%A5-ping-h2)
 ---
 # Mininet
 ## 建立一個網路拓樸
