--- a/109-2/20210322.md
+++ b/109-2/20210322.md
@@ -9,7 +9,7 @@
 ---
 # Mininet
 # NAT 轉換
-* 拓樸圖
+* 拓撲圖
 
 ![](Pic/20210322/NAT.jpg)
 
@@ -70,7 +70,7 @@ mininet> h1 ping 22.1.1.1
 apt install bridge-utils
 ```
 ## Test1 - 創建一個 Bridge 橋接器
-* 拓樸圖
+* 拓撲圖
 
 ![](Pic/20210322/bridge.jpg)
 
@@ -97,6 +97,8 @@ if '__main__' == __name__:
   br1.cmd("ifconfig br1-eth0 0")
   br1.cmd("ifconfig br1-eth1 0")
   br1.cmd("ifconfig br1-eth2 0")
+  
+  # 新增一個橋接器並命名為 mybr
   br1.cmd("brctl addbr mybr")
   br1.cmd("brctl addif mybr br1-eth0")
   br1.cmd("brctl addif mybr br1-eth1")
@@ -109,6 +111,7 @@ if '__main__' == __name__:
   net.stop()
 ```
 **測試**
+* h1 ping h2、h3
 
 ![](Pic/20210322/1.PNG)
 
@@ -120,7 +123,7 @@ tcpdump -i h2-eth0
 > 當 h1 ping h3，h2 不會監聽到任何的訊息
 
 ## Test2 - 建立兩個 Bridge
-* 拓樸圖
+* 拓撲圖
 
 ![](Pic/20210322/bridge2.jpg)
 
@@ -173,7 +176,7 @@ if '__main__' == __name__:
  
 
 ## Test3 - 新增一個 router
-* 拓樸圖
+* 拓撲圖
 
 ![](Pic/20210322/router.jpg)
 
@@ -246,7 +249,7 @@ if '__main__' == __name__:
 apt install vlan
 ```
 
-* 拓樸圖
+* 拓撲圖
   - `Trunk`：帶標籤
   - `access link`：不帶標籤 
 
@@ -283,10 +286,13 @@ if '__main__' == __name__:
   br1.cmd("ifconfig br1-rth2 0")
   br1.cmd("ifconfig br1-rth3 0")
   br1.cmd("ifconfig br1-rth4 0")
+
+  # 創造虛擬介面
   br1.cmd("vconfig add br1-eth4 10")
   br1.cmd("vconfig add br1-eth4 20")
   r1.cmd("vconfig add r1-eth0 10")
   r1.cmd("vconfig add r1-eth0 20")
+
   br1.cmd("brctl addbr mybr10")
   br1.cmd("brctl addbr mybr20")
   br1.cmd("brctl addif mybr10 br1-eth0")
@@ -317,11 +323,17 @@ if '__main__' == __name__:
 ```
 
 **測試**
-* br1 開啟 wireshark 觀察 br1-eth4，h1 ping h3
+* 測試 h1 ping h3，可以開啟 br1 的 wireshark 觀察 br1-eth4
 
 ![](Pic/20210322/brctl.PNG)
 
+* ping request 的 tag 是 10
+
 ![](Pic/20210322/wireshark.PNG)
+
+* ping reply 的 tag 是 20
+
+![](Pic/20210322/wireshark2.PNG)
 
 ## 補充 - `sed`
 * `sed -i '/^$/d' test.py`：將每一行的空白列刪除
