--- a/109-2/20210607.md
+++ b/109-2/20210607.md
@@ -1,8 +1,8 @@
-* [P4 (Programming Protocol - independent Packet Processors)]()
-    - [Broadcast & Multicast]()
-        - [Test2]()
-    - [Meter]()
-    - [Recirculate]()
+* [P4 (Programming Protocol - independent Packet Processors)](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210607.md#p4-programming-protocol---independent-packet-processors)
+    - [Broadcast & Multicast](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210607.md#broadcast--multicast)
+        - [Test2](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210607.md#test2)
+    - [Meter](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210607.md#meter)
+    - [Recirculate](https://github.com/linjiachi/Linux_note/blob/master/109-2/20210607.md#recirculate)
     - [Multipath]()
 ---
 # P4 (Programming Protocol - independent Packet Processors)
@@ -43,24 +43,100 @@ Two rates three colors algorithm (Green、Yallow、Red)
 
 
 **測試**
+```sh
+p4run
+xterm h1 h2
+```
 
-## Recirculate
+使用 iperf 傳輸觀察
+
+```sh
+// h2
+iperf -s -i 1 -u
+
+// h1
+iperf -c 10.0.2.1 -b 10M -l 1000 -t 100 -u
+iperf -c 10.0.2.1 -b 10M -l 500 -t 100 -u
+```
+![](Pic/20210607/meter1.PNG)
+
+![](Pic/20210607/meter2.PNG)
+
+* 第一次 length=1000，會發現頻寬在 800 Kbits/sec 左右
+* 第二次 length=500，會發現頻寬在 400 Kbits/sec 左右
+
+## Recirculate 
+1. 當在處理封包時，若一次沒辦法處理完成，可以在將封包丟回到 engress
+2. 不知道封包需要處理幾次才會結束
+
 * 拓撲圖
 
 ![](Pic/20210607/2.jpg)
+
+當 h1 傳送封包至 h2，tos 欄位會判斷條件，來決定要不要 recirculate
 
 **檔案**
 
 * 程式下載 [p4-utils-example](https://www.dropbox.com/sh/9qzkarvkwehgn9q/AACNww8zdDrR0N6z9bMMpNGEa/p4-utils-example?dl=0&subfolder_nav_tracking=1) 中的 [test-recirculate](https://www.dropbox.com/sh/9qzkarvkwehgn9q/AABiTv3bxnMcoBdPwmCP1OQ6a/p4-utils-example/test-recirculate?dl=0&subfolder_nav_tracking=1)
 
-## Multipath T
+* `ip_forward.p4`
+    ```sh
+    .
+    .
+    .
+    control egress(inout headers hdr, inout metadata meta, inout standard_metadata_t standard_metadata) {
+        action set_mytos() {
+            hdr.ipv4.diffserv=hdr.ipv4.diffserv-1;
+            recirculate<headers>(hdr);
+        }              
+        table set_tos {
+            key = {
+                hdr.ipv4.diffserv: range;
+            }
+            actions = {
+                set_mytos;
+                NoAction;
+            }
+            size = 1024;
+            default_action = NoAction();
+            const entries = {
+            1..10 : set_mytos();
+            _ : NoAction();
+            }
+        }
+        apply {
+        set_tos.apply();
+        }
+    }
+    .
+    .
+    .
+    ```
+
+**測試**
+```sh
+p4run
+xterm h1 h2
+```
+
+## Multipath
 * 拓撲圖
 
 ![](Pic/20210607/3.jpg)
 
+**檔案**
+
 * 程式下載 [p4-utils-example](https://www.dropbox.com/sh/9qzkarvkwehgn9q/AACNww8zdDrR0N6z9bMMpNGEa/p4-utils-example?dl=0&subfolder_nav_tracking=1) 中的 [multipath](https://www.dropbox.com/sh/9qzkarvkwehgn9q/AADTXZ-EnYFPp1LLqeNNw6zFa/p4-utils-example/multipath?dl=0&subfolder_nav_tracking=1)
 
 
+
+**測試**
+```sh
+p4run
+xterm h1 h2
+```
+
+## 
 
 
 
